tests/valid/test_array_52.wyal
assert:
   forall(int[] xs, int[] ys, int i):
      if:
          ys == xs[i:=0]
      then:
          |xs| == |ys|