tests/invalid/test_053.wyal
assert:
  forall(int[] ys, int[] xs):
    if:
        forall(int i):
            xs[i] == ys[i]
    then:
        |xs| < |ys|